# dweb-app

./: +AutomateUploadSection.svelte  +EvidenceUpload.svelte  +Header.svelte  +Modal.svelte  +Sidebar.svelte  .bat_7_23_25.txt  .env.actual  .env.docker  .env.example  .env.gpu  .env.ollama  .env.production  .env.secure.template  .gitattributes  .gitignore  .webgpu-som-cache.json  .wslconfig  4be_8atom_sm.txt  7-26_25rediscachcedisplayinguillmsynsteheizeionfunction.txt  725nier.txt  7_21_25.txt  7_21_25architecture_errorsmakingwork.txt  7_22_25_niercss_need_interactiveevidenceandreportgeneratorperosnofinterest.txt  7_26_25ai.txt  7_27_25aiphase8.txt  7_29_25phase12itegrations.txt  7_30_25.txt  7phasetodolist.md  81025npmrundevbert.txt  81125asynchriniusu.txt  81125fixedcrash.txt  81125nextstep.txt  81125npmruncheck.txt  811_25integration.txt  811_25npmruncheck.txt  812_25aiarchtiectur.txt  81325_2_errors_minio.txt  81325__.txt  81325aifeatures95.txt  81325errors.txt  (+843 more)
.claude/: project-config.json  settings.local.json
.githooks/: pre-commit
.roo/: mcp.json
CUsersjamesDesktopdeeds-webdeeds-web-apppi-gateway/: package-lock.json
Ollama/: ollama_welcome.ps1  unins000.msg
agent-orchestrator/: README.md  agents-config.json  config-loader.js  example-usage.js  index.js  llm-stream-handler.js
agents/: autogen-agent.ts  claude-agent.ts  crewai-agent.ts
ai-summarized-documents/: .keep
ai-summary-service/: IMPLEMENTATION-GUIDE.md  PLAYWRIGHT_TEST_REPORT.md  README.md  config.go  config.json  document-processor.go  enhanced-main.go  go.mod  go.sum  integration-status-report.json  live-agent-enhanced.go  main-enhanced.go  main.go  package-lock.json  package.json  playwright.config.js  sample-export-results.json  simple-doc-processor.go  test-document.txt  (+7 more)
rust-services/qdrant-vector/: Cargo.toml
rust-services/qdrant-vector/src/: main.rs
rust-services/webasm-bridge/: Cargo.toml
rust-services/webasm-bridge/src/: lib.rs
(+4766 files in other folders)
