[package]
name = "qdrant-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "qdrant-service"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
qdrant-client = "1.9"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
futures = "0.3"
clap = { version = "4.0", features = ["derive"] }

# WASM bridge dependencies
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
notify = "6.0"

# Performance optimization
rayon = "1.7"
parking_lot = "0.12"

# Vector operations
nalgebra = "0.32"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"

[features]
default = ["webasm-bridge"]
webasm-bridge = []