[package]
name = "webasm-bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["wasm-bindgen"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "File",
  "FileReader",
  "Blob",
  "DomException",
  "Event",
  "EventTarget",
  "MessageEvent",
  "Worker",
  "WorkerOptions",
  "Performance",
  "MemoryInfo"
]

# Native dependencies for file system access (when not in WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["full"] }
notify = "6.0"
walkdir = "2.3"

[dependencies.wasm-bindgen-futures]
version = "0.4"

[features]
default = []